--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.servlet.context-path=/contact-maintainer
 
 ##Database connection details
 spring.datasource.url=jdbc:mysql://localhost:3306/CONTACT_REPO
-spring.datasource.username=root
-spring.datasource.password=Dhanno@531
+spring.datasource.username=xyz
+spring.datasource.password=xyz
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
